# siren

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: example_usage.py  verify_install.py
src/siren/: __init__.py  core.py  optimizers.py
tests/: __init__.py  test_siren.py
